# weather_cli

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  weather_cache.db
docs/: separation-of-concerns.md
docs/design/: location-search-view.md
docs/planning/implementation/: TUI-initial-outline.md  geocoding-refactor-plan.md  location-search-controller-refactor.md  session-handoff-2026-06-26.md  weather-cli-impl-plan.md
src/: main.cpp
src/controller/: about_controller.cpp  about_controller.hpp  app_controller.cpp  app_controller.hpp  db_controller.cpp  db_controller.hpp  forecast_controller.cpp  forecast_controller.hpp  location_controller.cpp  location_controller.hpp  location_search_controller.cpp  location_search_controller.hpp
src/model/: about_state.hpp  app_state.hpp  location_repository.cpp  location_repository.hpp  location_search_state.hpp  weather_data.cpp  weather_data.hpp
src/service/: geocoding_service.cpp  geocoding_service.hpp  http_client.cpp  http_client.hpp  weather_service.cpp  weather_service.hpp  zippopotam_service.cpp  zippopotam_service.hpp
src/util/: constants.hpp  formatting.cpp  formatting.hpp
src/view/: about_view.cpp  about_view.hpp  app.cpp  app.hpp  app_view.cpp  app_view.hpp  location_search_view.cpp  location_search_view.hpp  weather_icon.cpp  weather_icon.hpp
src/view/component/: after_event.cpp  after_event.hpp
src/view/icons/: weather_icons.hpp
tests/: test_main.cpp
tests/controller/: test_about_controller.cpp  test_app_controller.cpp  test_db_controller.cpp  test_forecast_controller.cpp  test_location_controller.cpp  test_location_search_controller.cpp
tests/model/: test_weather_data.cpp
tests/service/: test_geocoding_service.cpp  test_http_client.cpp  test_weather_service.cpp  test_zippopotam_service.cpp
tests/util/: test_constants.cpp  test_formatting.cpp
tests/view/: test_app.cpp  test_app_view.cpp  test_weather_icon.cpp
